set(LIB_SOURCE_FILES Socket.cpp Socket.h udp/UDPSocket.cpp udp/UDPSocket.h tcp/TCPListenerSocket.cpp tcp/TCPListenerSocket.h tcp/TCPSocket.cpp tcp/TCPSocket.h udp/UDPPacket.cpp udp/UDPPacket.h SocketAddress.cpp SocketAddress.h inet/InetAddress.cpp inet/InetAddress.h inet/InetAddress4.cpp inet/InetAddress4.h inet/InetAddress6.cpp inet/InetAddress6.h SocketOptions.cpp SocketOptions.h terrisock.h raw/RawSocket.cpp raw/RawSocket.h raw/PacketFactory.cpp raw/PacketFactory.h raw/headers/IPHeader.cpp raw/headers/IPHeader.h raw/headers/TCPHeader.cpp raw/headers/TCPHeader.h raw/headers/UDPHeader.cpp raw/headers/UDPHeader.h raw/ChecksumFactory.cpp raw/ChecksumFactory.h raw/headers/Payload.cpp raw/headers/Payload.h)
add_library(terrisock SHARED ${LIB_SOURCE_FILES})